# vector

./: .gitignore  .gitmodules  .symlinks.lsp.json  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-3rdparty.csv  Makefile  README.md  build.rs  flake.nix  license-tool.toml
.github/workflows/: k8s_e2e.yml  observo.release.yml  observo.test.yml  publish.yaml  release.yaml  scorecard.yml  semantic.yml  test.yml  test_release.yaml
distribution/docker/debian/: Dockerfile
distribution/docker/ubi-fips/: Dockerfile
lib/codecs/: Cargo.toml
lib/codecs/src/: lib.rs  serde.rs
lib/codecs/tests/: native.rs
lib/dnstap-parser/: Cargo.toml
lib/enrichment/: Cargo.toml
lib/k8s-e2e-tests/: Cargo.toml
lib/observo/azs/: Cargo.toml
lib/observo/azs/src/: azs  lib.rs
lib/observo/chkpts/: Cargo.toml
lib/observo/chkpts/src/: chkpts  lib.rs
lib/observo/eventhub/: Cargo.toml
lib/observo/eventhub/src/: eventhub  lib.rs
lib/observo/gcs/: Cargo.toml
lib/observo/gcs/src/: gcs  lib.rs
lib/observo/lext/: Cargo.toml
lib/observo/lext/src/: lext  lib.rs
lib/observo/lv3/: Cargo.toml
lib/observo/lv3/src/: lib.rs  lv3
lib/observo/obvrl/: Cargo.toml  build.rs
lib/observo/obvrl/src/: lib.rs  obvrl
lib/observo/sauth/: Cargo.toml
lib/observo/sauth/src/: lib.rs  sauth
lib/observo/scol/: Cargo.toml
lib/observo/ssa/: Cargo.toml
lib/observo/ssa/src/: lib.rs  ssa
lib/observo/stcp/: Cargo.toml
lib/observo/wef/: Cargo.toml
lib/observo/wef/src/: lib.rs  wef
lib/opentelemetry-proto/: Cargo.toml
lib/opentelemetry-proto/src/: common.rs
lib/vector-api-client/: Cargo.toml
lib/vector-buffers/: Cargo.toml
lib/vector-common/: Cargo.toml
lib/vector-common/src/: chkpts.rs  config.rs  lib.rs  request_metadata.rs  wait_utils.rs
lib/vector-config/: Cargo.toml
lib/vector-config/src/: http.rs  lib.rs
lib/vector-core/: Cargo.toml
lib/vector-core/src/: chkpts.rs  gcp.rs  inet_test_util.rs  ipallowlist.rs  lib.rs  lua_err.rs  sink.rs  test_util.rs
lib/vector-lib/: Cargo.toml
lib/vector-lib/src/: lib.rs
lib/vector-lookup/: Cargo.toml
lib/vector-lookup/src/lookup_v2/: mod.rs
lib/vector-stream/: Cargo.toml
lib/vector-stream/src/: partitioned_batcher.rs
lib/vector-tap/: Cargo.toml
lib/vector-vrl/cli/: Cargo.toml
lib/vector-vrl/functions/: Cargo.toml
lib/vector-vrl/functions/src/: lib.rs
lib/vector-vrl/tests/: Cargo.toml
lib/vector-vrl/web-playground/: Cargo.toml
scripts/: build-docker.sh
scripts/cross/: aarch64-unknown-linux-gnu.dockerfile  bootstrap-ubuntu.sh  x86_64-unknown-linux-gnu.dockerfile
scripts/environment/: bootstrap-ubuntu-20.04.sh  debug.sh  observo-prepare.sh
src/: gcp.rs  lib.rs  validate.rs
src/aws/: auth.rs  mod.rs
src/codecs/encoding/: config.rs
src/common/: backoff.rs  mod.rs  sqs.rs  websocket.rs
src/conditions/: mod.rs  vrl.rs
src/config/: mod.rs  sink.rs  source.rs
src/config/unit_test/: mod.rs  tests.rs
src/enrichment_tables/: geoip.rs  mmdb.rs
src/internal_events/: aws_sqs.rs  hash_replace.rs  http.rs  loki.rs  lua.rs  mod.rs  process.rs  socket.rs  splunk_hec.rs  stream_analytics.rs
src/providers/: http.rs
src/sinks/: azs.rs  azure_sentinel_logs.rs  mezmo.rs  mod.rs  papertrail.rs  socket.rs
src/sinks/appsignal/: config.rs
src/sinks/aws_s3/: config.rs  sink.rs
src/sinks/azure_blob/: config.rs  request_builder.rs  test.rs
src/sinks/azure_monitor_logs/: config.rs
src/sinks/clickhouse/: config.rs
src/sinks/elasticsearch/: common.rs  config.rs  integration_tests.rs  mod.rs  service.rs  tests.rs
src/sinks/gcp/: cloud_storage.rs  pubsub.rs
src/sinks/gcp_chronicle/: chronicle_unstructured.rs
src/sinks/honeycomb/: config.rs
src/sinks/http/: config.rs
src/sinks/humio/: logs.rs  metrics.rs
src/sinks/influxdb/: logs.rs  metrics.rs  mod.rs
src/sinks/loki/: config.rs  sink.rs  tests.rs
src/sinks/new_relic/: config.rs
src/sinks/prometheus/: exporter.rs
src/sinks/redis/: tests.rs
src/sinks/s3_common/: service.rs
src/sinks/sematext/: metrics.rs
src/sinks/util/: compressor.rs  encoding.rs  http.rs  jwt_auth.rs  mod.rs  retries.rs  snappy.rs  tcp.rs  udp.rs  unix.rs  zstd.rs
src/sinks/vector/: config.rs  mod.rs  service.rs
src/sinks/websocket/: config.rs  sink.rs
src/source_sender/: mod.rs
src/sources/: demo_logs.rs  gcp_gcs.rs  gcp_pubsub.rs  heroku_logs.rs  http_server.rs  kafka.rs  logstash.rs  mod.rs  syslog.rs
src/sources/apache_metrics/: mod.rs
src/sources/aws_ecs_metrics/: mod.rs
src/sources/aws_kinesis_firehose/: mod.rs
src/sources/aws_s3/: mod.rs  sqs.rs  sqs_message_parsers.rs
src/sources/aws_sqs/: source.rs
src/sources/datadog_agent/: mod.rs  tests.rs
src/sources/dnstap/: parser.rs
src/sources/eventhub/: mod.rs
src/sources/eventstoredb_metrics/: mod.rs
src/sources/fluent/: mod.rs
src/sources/mongodb_metrics/: mod.rs
src/sources/nginx_metrics/: mod.rs
src/sources/opentelemetry/: http.rs  integration_tests.rs  mod.rs  tests.rs
src/sources/prometheus/: pushgateway.rs  remote_write.rs
src/sources/scol/: mod.rs
src/sources/socket/: mod.rs  udp.rs
src/sources/splunk_hec/: mod.rs
src/sources/splunk_s2s/: mod.rs  s2s_decoder.rs  splunk_s2s.rs
src/sources/statsd/: mod.rs
src/sources/stcp/: mod.rs
src/sources/util/: http_client.rs  jwt_auth.rs  mod.rs
src/sources/vector/: mod.rs
src/sources/websocket/: config.rs  source.rs
src/sources/wef/: mod.rs
src/test_util/: jwt_auth.rs  mod.rs
src/topology/: builder.rs  controller.rs  running.rs
src/topology/test/: mod.rs
src/transforms/: aws_ec2_metadata.rs  mod.rs
src/transforms/hash_replace/: config.rs  mod.rs  test.rs
src/transforms/lua/: mod.rs
src/transforms/reduce/: config.rs  merge_strategy.rs  mod.rs  transform.rs
src/transforms/sample/: config.rs  mod.rs  sample_provider.rs  tests.rs  transform.rs
src/transforms/ssa/: mod.rs
src/transforms/stream_analytics/: cardinality.rs  config.rs  log_stream_analyser.rs  metric_stream_analyser.rs  (+5 more)
tests/data/: elasticsearch_bulk.response.body.json
vdev/: Cargo.toml  README.md
vdev/src/: util.rs
website/: package.json
(+116 files in other folders)
