[package]
name = "vector-lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"] }
vector-config = { path = "../vector-config" }
vector-config-macros = { path = "../vector-config-macros" }
vrl = {  git = "ssh://git@github.com/Observo-Inc/vrl.git", rev = "e428894b51e1b740e280e28ab6f8c0ea14c642e7", default-features = false, features = ["path"] }
