[package]
name = "vector-lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"] }
vector-config = { path = "../vector-config" }
vector-config-macros = { path = "../vector-config-macros" }
vrl = {  git = "ssh://git@github.com/Observo-Inc/vrl.git", rev = "88c954b35ae61db319d601029f95e221ead30942", default-features = false, features = ["path"] }
