#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "azs"
version = "0.1.0"
authors = ["Observo <observo-all@observo.ai>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
azure_core = { version = "0.17", default-features = false, features = ["enable_reqwest"] }
azure_identity = { version = "0.17", default-features = false, features = ["enable_reqwest"] }
bytes = { version = "1.9.0", default-features = false, features = ["serde"] }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
once_cell = { version = "1.20.2", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { version = "0.1.83", default-features = false }
derivative = { version = "2.2.0", default-features = false }
chrono = { workspace = true }

# Vector dependencies
vector-common = { path = "../../vector-common", default-features = false }
vector-core = { path = "../../vector-core", default-features = false }
vector-config = { path = "../../vector-config", default-features = false }
vector-config-macros = { path = "../../vector-config-macros", default-features = false }
vector-lib = { path = "../../vector-lib", default-features = false }
vrl = { workspace = true }
typetag = { version = "0.2.18", default-features = false }
inventory = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
default = []
observo = []
