#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "chkpts"
version = "0.1.0"
authors = ["Observo <observo-all@observo.ai>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
vector-config = { path = "../../vector-config", default-features = false }
vector-common = { path = "../../vector-common", default-features = false }
serde.workspace = true
serde_with.workspace = true
anyhow.workspace = true
chrono.workspace = true
metrics.workspace = true
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime", "with-chrono-0_4"] }
deadpool-postgres = "0.13"
async-trait = { version = "0.1", default-features = false }
rusqlite.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = []

[dev-dependencies]
assert_matches = { version = "1.5" }
tempfile = "3.15.0"
rand.workspace = true
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
vector-common = { path = "../../vector-common", default-features = false, features = ["test"] }