#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "lv3"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.10.2", default-features = false, features = ["lua54", "send", "vendored", "macros", "async"] }
vector-lib = { path = "../../vector-lib", default-features = false, features = ["lua", "observo"] }
vector-config = { path = "../../vector-config", default-features = false }
vector-common = { path = "../../vector-common", default-features = false }
metrics.workspace = true
snafu.workspace = true
wasserglas.workspace = true
serde.workspace = true
tracing.workspace = true
mlua-json = { version = "1.0.0" }
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["test-util"], optional = true }
similar-asserts = { version = "1.6.0", optional = true }
tokio-stream = { workspace = true, optional = true }
tempfile = { version = "3.15.0", optional = true }
vrl = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
async-trait = { version = "0.1", default-features = false, optional = true}

[features]
default = []
test-scenarios = ["dep:futures", "dep:similar-asserts", "dep:tokio-stream", "dep:tempfile", "dep:vrl", "dep:toml", "vector-lib/test", "dep:async-trait", "dep:tokio"]

[dev-dependencies]
lv3 = { path = ".", features = ["test-scenarios"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
