#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "obvrl"
version = "0.1.0"
authors = ["Observo <observo-all@observo.ai>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
quick-xml = "0.37.5"
libc = "0.2.169"
cached = "*"
roxmltree = "0.20.0"
vrl.workspace = true

[dev-dependencies]
regex = "1"
ordered-float = { version = "4", default-features = false }

[build-dependencies]
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = []
vrl = []
