#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "sauth"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
vector-config = { path = "../../vector-config", default-features = false }
vector-lib = { path = "../../vector-lib", default-features = false }
serde.workspace = true
serde_with.workspace = true
headers.workspace = true
http.workspace = true
oauth2 = { git = "https://github.com/janmejay/oauth2-rs.git", features = ["reqwest", "rustls-tls"] }
tracing = { version = "0.1.34", default-features = false }
tokio.workspace = true
oxide-auth = { version = "0.6", path = "../vendor/oxide-auth/oxide-auth", optional = true}
oxide-auth-poem = { version = "0.3.0", path = "../vendor/oxide-auth/oxide-auth-poem", optional = true}
thiserror = {version = "2.0", optional = true}
poem = { version = "3.1.7", default-features = true, features = ["rustls"], optional = true }
poem-derive = { version = "~3.1.0", optional = true }
http-1.workspace = true
itertools.workspace = true
tempfile = { version = "3.15.0", optional = true }
rcgen = { version = "0.14", default-features = true, features = ["aws_lc_rs"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }
serde_json.workspace = true
toml.workspace = true
hyper.workspace = true
rand.workspace = true
url = { workspace = true, optional = true }

[features]
default = []
test-support = ["dep:thiserror", "dep:poem", "dep:poem-derive", "dep:oxide-auth",
  "dep:oxide-auth-poem", "dep:tempfile", "dep:rcgen", "dep:serde_urlencoded", "dep:url"]

[dev-dependencies]
sauth = {features = ["test-support"], path = "."}
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
tokio = { version = "1.43.0", features = ["test-util"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"]}
rstest = { version = "0.24.0" }
