[package]
name = "vector-vrl-cli"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
vector-vrl-functions = { path = "../functions" }
vrl = {  git = "ssh://git@github.com/Observo-Inc/vrl.git", rev = "88c954b35ae61db319d601029f95e221ead30942", default-features = false, features = ["stdlib", "cli"] }
